[package]
name = "delta3"
version = "0.1.0"
authors = ["Vyacheslav Guzev <slavaguzev1@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.1" }
clap = { version = "4.5.30", features = ["derive"] }
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk.git" }
ethers = { version = "2.0.14" }
env_logger = { version = "0.11.6" }
log = { version = "0.4.26" }
polars = { version = "0.46.0" }
uuid = { version = "1.14.0" }
serde = { version = "1.0.219" }
thiserror = { version = "2.0.12" }
chrono = { version = "0.4.40" }
lazy_static = { version = "1.5.0" }
reqwest = { version = "0.12.13" }
futures-util = { version = "0.3.31" }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde_json = { version = "1.0.140" }
rmp-serde = { version = "1.3.0" }
nalgebra = { version = "0.33.2" }
approx = { version = "0.5.1" }
async-trait = "0.1"
anyhow = "1.0"
rust-fsm = { version = "0.7.0" }
tower = { version = "0.4", features = ["limit"] }